RESOLVED FIXED305971
Modify BrowsingWarning according to internal requirements
https://bugs.webkit.org/show_bug.cgi?id=305971
Summary Modify BrowsingWarning according to internal requirements
pascoe@apple.com
Reported 2026-01-21 14:02:09 PST
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-21 14:02:17 PST
pascoe@apple.com
Comment 2 2026-01-21 14:39:36 PST
EWS
Comment 3 2026-02-09 16:32:32 PST
Committed 307123@main (d24975dccc26): <https://commits.webkit.org/307123@main> Reviewed commits have been landed. Closing PR #56998 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.