Modify BrowsingWarning according to internal requirements rdar://168615890 https://bugs.webkit.org/show_bug.cgi?id=305971

Reviewed by Charlie Wolfe.

This change modifies the red screen in certain situations.

More information is available in radar.

* Source/WebKit/Platform/spi/Cocoa/SafeBrowsingSPI.h:
* Source/WebKit/UIProcess/Cocoa/BrowsingWarningCocoa.mm:
(WebKit::localizedProviderShortName):
(WebKit::browsingDetailsText):
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::beginSafeBrowsingCheck):

Canonical link: https://commits.webkit.org/307123@main