Source/WebKit/UIProcess/Cocoa/BrowsingWarningCocoa.mm
@@ -33,9 +33,26 @@
 #import <wtf/StdLibExtras.h>
 #import <wtf/text/MakeString.h>
 
+#if USE(APPLE_INTERNAL_SDK) && __has_include(<WebKitAdditions/BrowsingWarningAdditions.mm>)
+#import <WebKitAdditions/BrowsingWarningAdditions.mm>
+#endif
+
+#if !defined(BROWSING_WARNING_PROVIDER_ADDITIONS)
+#define BROWSING_WARNING_PROVIDER_ADDITIONS
+#endif
+
+#if !defined(BROWSING_WARNING_PROVIDER_SHORT_NAME_ADDITIONS)
+#define BROWSING_WARNING_PROVIDER_SHORT_NAME_ADDITIONS
+#endif
+
+#if !defined(BROWSING_WARNING_DETAILS_TEXT_ADDITIONS)
+#define BROWSING_WARNING_DETAILS_TEXT_ADDITIONS
+#endif
+
 NSString * const SSBProviderGoogle = @"SSBProviderGoogle";
 NSString * const SSBProviderTencent = @"SSBProviderTencent";
 NSString * const SSBProviderApple = @"SSBProviderApple";
+BROWSING_WARNING_PROVIDER_ADDITIONS
 
 namespace WebKit {
 
@@ -71,10 +88,10 @@ static String localizedProviderShortName(SSBServiceLookupResult *result)
         return "Tencent"_s;
     if ([result.provider isEqual:SSBProviderApple])
         return "Apple"_s;
+    BROWSING_WARNING_PROVIDER_SHORT_NAME_ADDITIONS
     ASSERT_NOT_REACHED();
     return ""_s;
 }
-
 
 static void replace(NSMutableAttributedString *string, NSString *toReplace, NSString *replaceWith)
 {
@@ -142,6 +159,8 @@ static NSString *browsingWarningText(BrowsingWarning::Data data)
 
 static NSMutableAttributedString *browsingDetailsText(const URL& url, SSBServiceLookupResult *result)
 {
+    BROWSING_WARNING_DETAILS_TEXT_ADDITIONS
+
     if (result.isPhishing) {
         RetainPtr phishingDescription = WEB_UI_NSSTRING(@"Warnings are shown for websites that have been reported as deceptive. Deceptive websites try to trick you into believing they are legitimate websites you trust.", "Phishing warning description");
         RetainPtr learnMore = WEB_UI_NSSTRING(@"Learn more…", "Action from safe browsing warning");
